--- a/src/main/resources/assets/enderlib/lang/en_us.json
+++ b/src/main/resources/assets/enderlib/lang/en_us.json
@@ -5,6 +5,8 @@
   "key.enderlib.toggle_armor_passive_ability": "Toggle Armor Passive Ability",
   "key.enderlib.activate_armor_ability": "Activate Armor Ability",
 
+  "item.enderlib.text": "Test",
+
   "enderlib.midnightconfig.title": "EnderLib Configuration",
   "enderlib.midnightconfig.enderlib": "EnderLib",
   "enderlib.midnightconfig.equipmentStateCycleKey": "Equipment State Cycle Key"
